[package]
name = "codecrafters-grep"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"     # error handling
bytes = "1.3.0"       # helps manage buffers
thiserror = "1.0.38"  # error handling
itertools = "0.13.0"
log = "0.4.22"
lazy_static = "1.5.0"
env_logger = "0.11.5"
